<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientFormActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dni_text_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginTop="@dimen/margin_top_form"
        android:hint="@string/first_names"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapWords|textNoSuggestions"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weight_text_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_form"
        android:hint="@string/last_names"
        app:layout_constraintEnd_toEndOf="@id/dni_text_field"
        app:layout_constraintStart_toStartOf="@id/dni_text_field"
        app:layout_constraintTop_toBottomOf="@id/dni_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapWords|textNoSuggestions"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/temperature_text_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_form"
        android:hint="@string/dni"
        app:layout_constraintEnd_toEndOf="@id/weight_text_field"
        app:layout_constraintStart_toStartOf="@id/weight_text_field"
        app:layout_constraintTop_toBottomOf="@id/weight_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|textNoSuggestions"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pressure_text_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_form"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@id/temperature_text_field"
        app:layout_constraintStart_toStartOf="@id/temperature_text_field"
        app:layout_constraintTop_toBottomOf="@id/temperature_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/saturation_text_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_form"
        android:hint="@string/address"
        app:layout_constraintEnd_toEndOf="@id/pressure_text_field"
        app:layout_constraintStart_toStartOf="@id/pressure_text_field"
        app:layout_constraintTop_toBottomOf="@id/pressure_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textNoSuggestions"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_marginTop="@dimen/margin_button_form"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@id/saturation_text_field"
        app:layout_constraintStart_toStartOf="@id/saturation_text_field"
        app:layout_constraintTop_toBottomOf="@id/saturation_text_field" />

</androidx.constraintlayout.widget.ConstraintLayout>