<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="visitFormActivity"
            type="com.lab03.visitadoresmedicos.views.VisitFormActivity" />
        <variable
            name="viewModelVisit"
            type="com.lab03.visitadoresmedicos.viewmodels.VisitActivityViewModel2" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.VisitFormActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dni_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_top_form"
            android:layout_marginTop="@dimen/margin_top_form"
            android:hint="@string/dni"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dni_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weight_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_form"
            android:hint="@string/weight"
            app:layout_constraintEnd_toEndOf="@id/dni_text_field"
            app:layout_constraintStart_toStartOf="@id/dni_text_field"
            app:layout_constraintTop_toBottomOf="@id/dni_text_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weight_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@{viewModelVisit.weight}"
               />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/temperature_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_form"
            android:hint="@string/temperature"
            app:layout_constraintEnd_toEndOf="@id/weight_text_field"
            app:layout_constraintStart_toStartOf="@id/weight_text_field"
            app:layout_constraintTop_toBottomOf="@id/weight_text_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/temperature_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@{viewModelVisit.temperature}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pressure_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_form"
            android:hint="@string/pressure"
            app:layout_constraintEnd_toEndOf="@id/temperature_text_field"
            app:layout_constraintStart_toStartOf="@id/temperature_text_field"
            app:layout_constraintTop_toBottomOf="@id/temperature_text_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pressure_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@{viewModelVisit.pressure}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/saturation_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_form"
            android:hint="@string/saturation_level"
            app:layout_constraintEnd_toEndOf="@id/pressure_text_field"
            app:layout_constraintStart_toStartOf="@id/pressure_text_field"
            app:layout_constraintTop_toBottomOf="@id/pressure_text_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/saturation_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@{viewModelVisit.saturation}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_visit_data_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_button_form"
            android:text="@string/register"
            android:onClick="@{()->visitFormActivity.saveVisit()}"
            app:layout_constraintEnd_toEndOf="@id/saturation_text_field"
            app:layout_constraintStart_toStartOf="@id/saturation_text_field"
            app:layout_constraintTop_toBottomOf="@id/saturation_text_field" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>